--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
-    "next": "15.5.4",
-    "react": "19.1.0",
+    "next": "13.5.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-circular-progressbar": "^2.2.0",
-    "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.3.1"
@@ -24,8 +24,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.4",
+    "eslint": "^8.46.0",
+    "eslint-config-next": "13.5.8",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0"
   }
