--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
     "next": "13.5.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-circular-progressbar": "^2.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.3.1"
