--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "react": "19.1.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
